dx/force-app/main/default/objects/ltng_URLHackChild__c/ltng_URLHackChild__c.object-meta.xml
<CustomObject>
    <description>Child object created using the URL Hack</description>
    <label>URL Hack Child</label>
    <nameField>
        <label>URL Hack Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>URL Hack Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>