dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/CreatedByUserLastName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUserLastName__c</fullName>
    <inlineHelpText>LastName of the user that created this record</inlineHelpText>
    <label>Created By User LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>