dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/CustomDescription__c.field-meta.xml
<CustomField>
    <fullName>CustomDescription__c</fullName>
    <label>Custom Description</label>
    <type>TextArea</type>
</CustomField>