dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/CustomMetadataValue__c.field-meta.xml
<CustomField>
    <fullName>CustomMetadataValue__c</fullName>
    <label>Custom Metadata Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>