dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/CustomSettingValue__c.field-meta.xml
<CustomField>
    <fullName>CustomSettingValue__c</fullName>
    <inlineHelpText>Value set from custom setting</inlineHelpText>
    <label>Custom Setting Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>