dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/SampleCheckbox__c.field-meta.xml
<CustomField>
    <fullName>SampleCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Checkbox</label>
    <type>Checkbox</type>
</CustomField>