dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/SampleNumber__c.field-meta.xml
<CustomField>
    <fullName>SampleNumber__c</fullName>
    <label>Sample Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>