dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/SamplePicklist__c.field-meta.xml
<CustomField>
    <fullName>SamplePicklist__c</fullName>
    <label>Sample Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>