dx/force-app/main/default/objects/ltng_URLHackChild__c/fields/URLHackBase__c.field-meta.xml
<CustomField>
    <fullName>URLHackBase__c</fullName>
    <inlineHelpText>Base this child was created from</inlineHelpText>
    <label>URL Hack Base</label>
    <referenceTo>ltng_UrlHackBase__c</referenceTo>
    <relationshipLabel>URL Hack Children</relationshipLabel>
    <relationshipName>URLHackChildren</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>