dx/force-app/main/default/objects/ltng_URLHackChild__c/recordTypes/Extended.recordType-meta.xml
<RecordType>
    <fullName>Extended</fullName>
    <active>true</active>
    <description>Extended version of the URL Hack Record</description>
    <label>Extended</label>
</RecordType>