dx/force-app/main/default/objects/ltng_URLHackChild__c/recordTypes/Minimum.recordType-meta.xml
<RecordType>
    <fullName>Minimum</fullName>
    <active>true</active>
    <description>Bare minimum we want for a Record</description>
    <label>Minimum</label>
</RecordType>